--- a/MaterialDesignExample/src/main/res/values/strings.xml
+++ b/MaterialDesignExample/src/main/res/values/strings.xml
@@ -11,21 +11,25 @@
         ]]>
     </string>
 
-
     <!-- ========================================== -->
-    <!-- =                    Menu                = -->
+    <!-- =                  Fragments             = -->
     <!-- ========================================== -->
-    <string name="menu_open">Menu open</string>
-    <string name="menu_close">Menu close</string>
+    <string name="str_home_fragment_title">
+        <![CDATA[
+          <i><b>Home</b></i>
+        ]]>
+    </string>
 
-    <string-array name="menu_title">
-        <item>Today</item>
-        <item>Notifications</item>
-        <item>More Apps</item>
-        <item>Donate</item>
-        <item>About</item>
-        <item>Send test Push Notification</item>
-    </string-array>
+    <string name="str_friends_fragment_title">
+        <![CDATA[
+          <i><b>Friends</b></i>
+        ]]>
+    </string>
 
+    <string name="str_messages_fragment_title">
+        <![CDATA[
+          <i><b>Messages</b></i>
+        ]]>
+    </string>
 
 </resources>
