MD Shadow layouts changes

--- a/MaterialDesignExample/src/main/res/values/strings.xml
+++ b/MaterialDesignExample/src/main/res/values/strings.xml
@@ -38,6 +38,12 @@
         ]]>
     </string>
 
+    <string name="str_layout_fragment_title">
+        <![CDATA[
+          <i><b>Layuts</b></i>
+        ]]>
+    </string>
+
     <!-- ========================================== -->
     <!-- =                 Buttons                = -->
     <!-- ========================================== -->
