Added Toggle Switch

--- a/MaterialDesignExample/src/main/res/values/strings.xml
+++ b/MaterialDesignExample/src/main/res/values/strings.xml
@@ -40,7 +40,7 @@
 
     <string name="str_layout_fragment_title">
         <![CDATA[
-          <i><b>Layuts</b></i>
+          <i><b>Layouts</b></i>
         ]]>
     </string>
 
