Added Toggle Button

--- a/MaterialDesignExample/src/main/res/values/strings.xml
+++ b/MaterialDesignExample/src/main/res/values/strings.xml
@@ -44,6 +44,12 @@
         ]]>
     </string>
 
+    <string name="str_switch_fragment_title">
+        <![CDATA[
+          <i><b>Switches</b></i>
+        ]]>
+    </string>
+
     <!-- ========================================== -->
     <!-- =                 Buttons                = -->
     <!-- ========================================== -->
